; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_effect-parser.c_ep_write_main.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_effect-parser.c_ep_write_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.effect_parser = type { i32 }
%struct.ep_func = type { i8*, i8* }
%struct.dstr = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c" main(\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c")\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c" : \00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"\0A{\0A\09return \00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"\0A}\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.effect_parser*, %struct.dstr*, %struct.ep_func*, %struct.dstr*)* @ep_write_main to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ep_write_main(%struct.effect_parser* %0, %struct.dstr* %1, %struct.ep_func* %2, %struct.dstr* %3) #0 {
  %5 = alloca %struct.effect_parser*, align 8
  %6 = alloca %struct.dstr*, align 8
  %7 = alloca %struct.ep_func*, align 8
  %8 = alloca %struct.dstr*, align 8
  %9 = alloca %struct.dstr, align 4
  %10 = alloca %struct.dstr, align 4
  store %struct.effect_parser* %0, %struct.effect_parser** %5, align 8
  store %struct.dstr* %1, %struct.dstr** %6, align 8
  store %struct.ep_func* %2, %struct.ep_func** %7, align 8
  store %struct.dstr* %3, %struct.dstr** %8, align 8
  %11 = call i32 @dstr_init(%struct.dstr* %9)
  %12 = load %struct.dstr*, %struct.dstr** %8, align 8
  %13 = call i32 @dstr_init_copy_dstr(%struct.dstr* %10, %struct.dstr* %12)
  %14 = load %struct.dstr*, %struct.dstr** %6, align 8
  %15 = call i32 @dstr_cat(%struct.dstr* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.dstr*, %struct.dstr** %6, align 8
  %17 = load %struct.ep_func*, %struct.ep_func** %7, align 8
  %18 = getelementptr inbounds %struct.ep_func, %struct.ep_func* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 @dstr_cat(%struct.dstr* %16, i8* %19)
  %21 = load %struct.dstr*, %struct.dstr** %6, align 8
  %22 = call i32 @dstr_cat(%struct.dstr* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %23 = load %struct.effect_parser*, %struct.effect_parser** %5, align 8
  %24 = load %struct.dstr*, %struct.dstr** %6, align 8
  %25 = load %struct.ep_func*, %struct.ep_func** %7, align 8
  %26 = call i32 @ep_write_main_params(%struct.effect_parser* %23, %struct.dstr* %24, %struct.dstr* %9, %struct.ep_func* %25)
  %27 = load %struct.dstr*, %struct.dstr** %6, align 8
  %28 = call i32 @dstr_cat(%struct.dstr* %27, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %29 = load %struct.ep_func*, %struct.ep_func** %7, align 8
  %30 = getelementptr inbounds %struct.ep_func, %struct.ep_func* %29, i32 0, i32 1
  %31 = load i8*, i8** %30, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %4
  %34 = load %struct.dstr*, %struct.dstr** %6, align 8
  %35 = call i32 @dstr_cat(%struct.dstr* %34, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %36 = load %struct.dstr*, %struct.dstr** %6, align 8
  %37 = load %struct.ep_func*, %struct.ep_func** %7, align 8
  %38 = getelementptr inbounds %struct.ep_func, %struct.ep_func* %37, i32 0, i32 1
  %39 = load i8*, i8** %38, align 8
  %40 = call i32 @dstr_cat(%struct.dstr* %36, i8* %39)
  br label %41

41:                                               ; preds = %33, %4
  %42 = load %struct.dstr*, %struct.dstr** %6, align 8
  %43 = call i32 @dstr_cat(%struct.dstr* %42, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %44 = load %struct.dstr*, %struct.dstr** %6, align 8
  %45 = call i32 @dstr_cat_dstr(%struct.dstr* %44, %struct.dstr* %10)
  %46 = load %struct.dstr*, %struct.dstr** %6, align 8
  %47 = call i32 @dstr_cat(%struct.dstr* %46, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0))
  %48 = call i32 @dstr_free(%struct.dstr* %10)
  %49 = call i32 @dstr_free(%struct.dstr* %9)
  ret void
}

declare dso_local i32 @dstr_init(%struct.dstr*) #1

declare dso_local i32 @dstr_init_copy_dstr(%struct.dstr*, %struct.dstr*) #1

declare dso_local i32 @dstr_cat(%struct.dstr*, i8*) #1

declare dso_local i32 @ep_write_main_params(%struct.effect_parser*, %struct.dstr*, %struct.dstr*, %struct.ep_func*) #1

declare dso_local i32 @dstr_cat_dstr(%struct.dstr*, %struct.dstr*) #1

declare dso_local i32 @dstr_free(%struct.dstr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
